MODSOURMAN-1308: Upgrade all dependencies for Sunflower fixing vulns (#979)
(cherry picked from commit 499b2a5fa48016b476e0844eccc9d11fbec46a5a)